<resources>
    <string name="app_name" translatable="false">Easyship</string>
    <string name="str_home">Home</string>
    <string name="str_parcels">Parcels</string>
    <string name="str_deliver">Deliver</string>
    <string name="str_profile">Profile</string>
    <string name="str_your_location">Your location</string>
    <string name="str_change">Change</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fmt_what_s_goin_on_today">Hey %s, what\'s going on today ?</string>
    <string name="str_send_a_parcel">Send a parcel</string>
    <string name="str_find_parcel">Find parcel to deliver</string>
    <string name="str_parcel_shipments">Parcel shipments</string>
    <string name="str_id_dots">"ID: "</string>
    <string name="str_from_dots">"From: "</string>
    <string name="str_to_dots">"To: "</string>
    <string name="str_by_dots">"By: "</string>
    <string name="str_no_carrier">No carrier</string>
    <string name="fmt_shipment_n">Shipment N°%d</string>
    <string name="fmt_initiated_on">Initiated on %s</string>
    <string name="str_not_done">Not done</string>
    <string name="str_list_of_ships">List of shipments</string>
    <string name="str_deliveries">Deliveries</string>
    <string name="str_near_dots">"Near: "</string>
    <string name="str_notifications">Notifications</string>
    <string name="fmt_accepted_your_offer">%s accepted your offer.</string>
    <string name="fmt_today_date">Today, %s</string>
    <string name="fmt_yesterday_date">Yesterday, %s</string>
    <string name="str_edit_your_profile">Edit your profile</string>
    <string name="fmt_user_caps">%d (%d%%)</string>
    <string name="str_your_profile">Your profile</string>
    <string name="str_new_shipment">New shipment</string>
    <string name="fmt_date_at_hour">%s at %s</string>
    <string name="fmt_registred_packages">%d registered package(s)</string>
    <string name="str_recipient">Recipient</string>
    <string name="str_not_specified">Not specified</string>
    <string name="str_destination">Destination</string>
    <string name="str_deadline">Deadline</string>
    <string name="str_price">Price</string>
    <string name="str_carrier">Carrier</string>
    <string name="fmt_new_offers">%d new offer(s)</string>
    <string name="str_start_delivery">Start delivery</string>
    <string name="str_tap_to_see_package_list">Tap to see the registred packages</string>
    <string name="str_details">Details</string>
    <string name="str_find_a_carrier">Find a carrier</string>
    <string name="str_saved_parcels">Included parcels</string>
    <string name="str_adding_a_parcel">Adding a parcel</string>
    <string name="str_name">Name</string>
    <string name="str_eg_1">eg: Italian shoes...</string>
    <string name="str_type">Type</string>
    <string name="str_others">Others</string>
    <string name="str_documents">Documents</string>
    <string name="str_clothes">Clothes</string>
    <string name="str_keys">Keys</string>
    <string name="str_books">Books</string>
    <string name="str_jewels">Jewels</string>
    <string name="str_electronic_appliances">Electronic appliances</string>
    <string name="str_weight">Weight</string>
    <string name="str_fill_in_text">Fill in the informations about your package, then press Save</string>
    <string name="str_dimensions">Dimensions</string>
    <string name="str_0_500g">0-500g</string>
    <string name="str_500_1kg">500g-1Kg</string>
    <string name="str_1_5kg">1Kg-5Kg</string>
    <string name="str_5_10kg">5Kg-10Kg</string>
    <string name="str_over_10kg">Over 10Kg</string>
    <string name="str_small">Small</string>
    <string name="str_medium">Medium</string>
    <string name="str_large">Large</string>
    <string name="str_very_large">Very large</string>
    <string name="str_approximate">Approximate</string>
    <string name="str_comments">Comments</string>
    <string name="str_fill_in_details_text">Fill in the details of your shipment. eg: Precise location, conditions...</string>
    <string name="str_describe_your_package">Describe your package as precisely as possible</string>
    <string name="str_save">Save</string>
    <string name="str_photos">Photos</string>
    <string name="str_choose_a_name_text">Choose a name that generalizes the content</string>
    <string name="str_for_safety_reasons_text">Recommended: For safety reasons, do not take pictures of the content of the parcel, but only take pictures of it in its packaging.</string>
    <string name="str_in_progress">In progress</string>
    <string name="str_canceled">Canceled</string>
    <string name="str_done">Done</string>
    <string name="fmt_fcfa">%d FCFA</string>
    <string name="str_no_registered_package">No registered package</string>
    <string name="str_parcel_tap_the_plus_button_text">Press the \"+\" to add a new package in this delivery.</string>
    <string name="str_tap_to_choose_another_picture">Tap to choose another picture.</string>
    <string name="err_required_field">This field is required.</string>
    <string name="notif_welcome">Welcome on EasyShip !</string>
    <string name="str_first_name">First name</string>
    <string name="str_last_name">Last name</string>
    <string name="str_gender">Gender</string>
    <string name="str_birth_date">Birth date</string>
    <string name="str_region">Region</string>
    <string name="str_city">City</string>
    <string name="str_disctrict">District</string>
    <string name="str_validate">Validate</string>
    <string name="str_shipment_tap_the_plus_button_text">Press the \"+\" to initiate a new parcel shipment.</string>
    <string name="str_no_shipment_recorded">No shipment recorded</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>