<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="18dp"
    app:cardElevation="7dp"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/item_shipment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp"
        style="@style/AppTheme">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/item_shipment_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="9dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/str_not_done"
                android:fontFamily="@font/samsung_sans_medium"
                android:textSize="17sp"
                android:background="@drawable/background_rounded_default"
                android:backgroundTint="@color/colorBackShipStatus_0"/>
            <TextView
                android:id="@+id/item_shipment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fmt_initiated_on"
                android:textSize="18sp"
                android:fontFamily="@font/samsung_sans_light"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/item_shipment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fmt_shipment_n"
            android:fontFamily="@font/samsung_sans_bold"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_id_dots"
                android:fontFamily="@font/samsung_sans_medium"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/item_shipment_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EXP-HSBSC-0036468"
                android:fontFamily="@font/samsung_sans_light"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_from_dots"
                android:fontFamily="@font/samsung_sans_medium"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/item_shipment_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Douala, Makepe"
                android:fontFamily="@font/samsung_sans_light"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_to_dots"
                android:fontFamily="@font/samsung_sans_medium"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/item_shipment_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yaoundé, Ekounou"
                android:fontFamily="@font/samsung_sans_light"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_by_dots"
                android:fontFamily="@font/samsung_sans_medium"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/item_shipment_carrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_no_carrier"
                android:fontFamily="@font/samsung_sans_light"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>