<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.fragments.HomeFragment"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_your_location"
                style="@style/Level2_Text"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/fragment_home_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Douala, Akwa"
                style="@style/Level1_Text"
                android:textAlignment="center"
                android:layout_marginTop="18dp"/>
            <TextView
                android:id="@+id/fragment_home_change_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_change"
                style="@style/RegularText"
                android:textFontWeight="600"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            >
            <TextView
                android:id="@+id/fragment_home_greetings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fmt_what_s_goin_on_today"
                style="@style/Level2_Text"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/fragment_home_send_parcel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_send_a_parcel"
                style="@style/ButtonText"
                android:background="@drawable/background_button_primary"
                android:textColor="@android:color/white"
                android:elevation="2dp"
                android:layout_marginTop="18dp"
                android:drawableStart="@drawable/ic_icons8_email_send"
                android:drawableTint="@android:color/white"
                />
            <Button
                android:id="@+id/fragment_home_find_parcel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_find_parcel"
                style="@style/ButtonText"
                android:background="@drawable/background_button_white"
                android:elevation="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="15dp"
                android:drawableStart="@drawable/ic_icons8_receive_cash"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>