<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.IncludedParcelsActivity"
    android:padding="24dp">

    <RelativeLayout
        android:id="@+id/activity_included_parcels_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/activity_included_parcels_action_bar_close_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_icons8_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/activity_included_parcels_action_bar_close_btn"
            android:fontFamily="@font/samsung_sans_bold"
            android:text="@string/str_saved_parcels"
            android:textColor="@android:color/black"
            android:textSize="26sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_included_parcels_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/activity_included_parcels_action_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp"
        tools:listitem="@layout/item_list_parcel"/>

    <LinearLayout
        android:id="@+id/activity_included_parcels_empty_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_included_parcels_action_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/undraw_empty"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_no_registered_package"
            android:textAlignment="center"
            android:fontFamily="@font/samsung_sans_bold"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_parcel_tap_the_plus_button_text"
            android:textAlignment="center"
            android:fontFamily="@font/samsung_sans_light"
            android:textSize="18sp"
            android:textColor="@color/colorDefaultText"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_included_parcels_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_icons8_plus_math"
        android:tint="@android:color/white"
        android:layout_margin="12dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>